Alteração espaçamento e maregem

--- a/sobre.html
+++ b/sobre.html
@@ -3,15 +3,15 @@
 	<head>
 	<meta charset="utf 8">
 	<title>Sobre a Mirror Fashion</title>
-	<link rel="stylesheet" href="C:\mirrorfashion\css\sobre.css">
+	<link rel="stylesheet" href="C:\Users\Raphael Gama\Desktop\mirrorfashion\mirrorfashion\css\sobre.css">
 	</head>
 	<body>
-		<img src="C:\mirrorfashion\img\logo.png">
+		<img src="C:\Users\Raphael Gama\Desktop\mirrorfashion\mirrorfashion\img\logo.png">
 		<h1>A Mirror Fashion</h1>
 		<p>A <strong>Mirror Fashion</strong> é a maior empresa comércio eletrônico no segmento de moda em todo o mundo.</p> 
 		<p>Fundada em 1932, possui filiais em 124 países, sendo líder de mercado com mais de 90% de participação em 118 deles.</p>
 		<figure>
-			<img src="C:\mirrorfashion\img\centro-distribuicao.png">
+			<img src="C:\Users\Raphael Gama\Desktop\mirrorfashion\mirrorfashion\img\centro-distribuicao.png">
 			<figcaption>Centro de distribuição da Mirror Fashion.</figcaption>
 		</figure>
 
@@ -24,7 +24,7 @@
 		<h2>História</h2>
 		
 		<figure>
-			<img src="C:\mirrorfashion\img\familia-pelho.jpg">
+			<img src="C:\Users\Raphael Gama\Desktop\mirrorfashion\mirrorfashion\img\familia-pelho.jpg">
 			<figcaption>Família Pelho</figcaption>
 		</figure>
 
@@ -46,5 +46,12 @@
 		<p>Dada a importância econômica da empresa para o Brasil, a família <em>Pelho</em> já recebeu diversos prêmios, 
 		homenagens e condecorações. Todos os presidentes do Brasil já visitaram as instalações da Mirror 
 		Fashion, além de presidentes da União Européia, Ásia e o secretário-geral da ONU.</p>
+
+		<h2>Diferenciais</h2>
+		<ul>
+			<li>Menor preço do varejo, garantido</li>
+			<li>Se você achar uma loja mais barata, leva o produto de graça.</li>
+		</ul>
+
 	</body>
 </html>
