Criação página Index e finalização da Sobre

--- a/index.html
+++ b/index.html
@@ -3,15 +3,32 @@
 	<head>
 		<title>Mirror Fashion</title>
 		<meta charset="utf 8">
+		<link rel="stylesheet" href="C:\Users\Raphael Gama\Desktop\mirrorfashion\mirrorfashion\css\estilo.css">
 	</head>
 	<body>
-		<h1>Mirror Fashion</h1>
-		<h2>Bem-vindo à Mirror Fashion, sua loja de roupas e acessórios.</h2>
-		<ul>
-			<li>Confira nossas promoções</li>
-			<li>Receba informações sobre nossos lançamentos por email.</li>
-			<li>Navegue por todos nossos produtos em catálogo.</li>
-			<li>Compre sem sair de casa.</li>
-		</ul>
+		<header>
+			<h1><img src="C:\Users\Raphael Gama\Desktop\mirrorfashion\mirrorfashion\img\logo.png" alt="Mirror Fashion"></h1>
+			<p class="sacola">
+				Nenhum intem na sacola de compras
+			</p>
+			<nav class="menu-opcoes">
+				<ul>
+					<li><a href="#">Sua Conta</a></li>
+					<li><a href="#">Lista de Desejos</a></li>
+					<li><a href="#">Cartão Fidelidade</a></li>
+					<li><a href="#sobre.html">Sobre</a></li>
+					<li><a href="#">Ajuda</a></li>
+				</ul>
+			</nav>
+		</header>
+		<section id="main">
+
+		</section>
+		<section id="destaques">
+
+		</section>
+		<footer>
+
+		</footer>
 	</body>
 </html>
