--- a/sobre.html
+++ b/sobre.html
@@ -10,20 +10,19 @@
 		<h1>A Mirror Fashion</h1>
 		<p>A <strong>Mirror Fashion</strong> é a maior empresa comércio eletrônico no segmento de moda em todo o mundo.</p> 
 		<p>Fundada em 1932, possui filiais em 124 países, sendo líder de mercado com mais de 90% de participação em 118 deles.</p>
-		<figure>
+		<figure id="centro-distribuicao">
 			<img src="C:\Users\Raphael Gama\Desktop\mirrorfashion\mirrorfashion\img\centro-distribuicao.png">
 			<figcaption>Centro de distribuição da Mirror Fashion.</figcaption>
 		</figure>
 
-		<p>Nosso centro de distribuição fica em Jacarezinho, no Paraná. De lá, saem 48 aviões que 
-		distribuem nossos produtos às casas do mundo todo. Nosso centro de distribuição:</p>
+		<p>Nosso centro de distribuição fica em <a href="https://www.google.com.br/maps/place/Jacarezinho,+PR,+86400-000/@-23.1588592,-50.0033584,13z/data=!3m1!4b1!4m5!3m4!1s0x94c026544d26f253:0xc66dac11dad56f73!8m2!3d-23.157939!4d-49.9777202">Jacarezinho, no Paraná</a>. De lá, saem 48 aviões que distribuem nossos produtos às casas do mundo todo. Nosso centro de distribuição:</p>
 
-		<p>Compre suas roupas e acessórios na Mirror Fashion. Acesse nossa loja ou entre em contato 
-		se tiver dúvidas. Conheça também nossa história e nossos diferenciais.</p>
+		<p>Compre suas roupas e acessórios na Mirror Fashion. Acesse <a href="index.html">nossa loja</a> ou entre em contato 
+		se tiver dúvidas. Conheça também nossa <a href="#historia">história</a> e nossos <a href="#diferenciais">diferenciais</a>.</p>
 
-		<h2>História</h2>
+		<h2 id="historia">História</h2>
 		
-		<figure>
+		<figure id="familia-pelho">
 			<img src="C:\Users\Raphael Gama\Desktop\mirrorfashion\mirrorfashion\img\familia-pelho.jpg">
 			<figcaption>Família Pelho</figcaption>
 		</figure>
@@ -47,11 +46,17 @@
 		homenagens e condecorações. Todos os presidentes do Brasil já visitaram as instalações da Mirror 
 		Fashion, além de presidentes da União Européia, Ásia e o secretário-geral da ONU.</p>
 
-		<h2>Diferenciais</h2>
+		<h2 id="diferenciais">Diferenciais</h2>
 		<ul>
 			<li>Menor preço do varejo, garantido</li>
 			<li>Se você achar uma loja mais barata, leva o produto de graça.</li>
 		</ul>
+
+		<div id="rodape">
+			<img src="C:\Users\Raphael Gama\Desktop\mirrorfashion\mirrorfashion\img\logo.png">
+
+			&copy; Copyright Mirror Fashion
+		</div>
 
 	</body>
 </html>
