--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 	<head>
 		<title>Mirror Fashion</title>
 		<meta charset="utf 8">
-		<link rel="stylesheet" href="C:\Users\Raphael Gama\Desktop\mirrorfashion\mirrorfashion\css\estilo.css">
+		<link rel="stylesheet" href="C:\mirrorfashion\css\reset.css">
+		<link rel="stylesheet" href="C:\mirrorfashion\css\estilo.css">
 	</head>
 	<body>
-		<header>
-			<h1><img src="C:\Users\Raphael Gama\Desktop\mirrorfashion\mirrorfashion\img\logo.png" alt="Mirror Fashion"></h1>
+		<header class="container">
+			<h1><img src="C:\mirrorfashion\img\logo.png" alt="Mirror Fashion"></h1>
 			<p class="sacola">
 				Nenhum intem na sacola de compras
 			</p>
@@ -22,6 +23,32 @@
 			</nav>
 		</header>
 		<section id="main">
+			<div class="container destaque">
+				<section class="busca">
+					<h2>Busca</h2>
+
+					<form>
+						<input type="search">
+						<input type="image" src="C:\mirrorfashion\img\busca.png">
+					</form>
+				</section>
+				<section class="menu-departamentos">
+					<h2>Departamentos</h2>	
+					
+					<nav>
+						<ul>
+							<li><a href="#">Blusas e Camisas</a></li>
+							<li><a href="#">Calças</a></li>
+							<li><a href="#">Saias</a></li>
+							<li><a href="#">Vestidos</a></li>
+							<li><a href="#">Sapatos</a></li>
+							<li><a href="#">Bolsas e Carterias</a></li>
+							<li><a href="#">Acessórios</a></li>
+						</ul>
+					</nav>
+				</section>
+				<img src="C:\mirrorfashion\img\destaque-home.png" alt="Promoção: Big City Night">
+			</div>
 
 		</section>
 		<section id="destaques">
