--- a/sobre.html
+++ b/sobre.html
@@ -3,15 +3,31 @@
 	<head>
 	<meta charset="utf 8">
 	<title>Sobre a Mirror Fashion</title>
-	<link rel="stylesheet" href="C:\Users\Raphael Gama\Desktop\mirrorfashion\mirrorfashion\css\sobre.css">
+	<link rel="stylesheet" href="C:\mirrorfashion\css\reset.css">
+	<link rel="stylesheet" href="C:\mirrorfashion\css\estilo.css">
+	<link rel="stylesheet" href="C:\mirrorfashion\css\sobre.css">
 	</head>
 	<body>
-		<img src="C:\Users\Raphael Gama\Desktop\mirrorfashion\mirrorfashion\img\logo.png">
+		<header class="container">
+			<h1><img src="C:\mirrorfashion\img\logo.png" alt="Mirror Fashion"></h1>
+			<p class="sacola">
+				Nenhum intem na sacola de compras
+			</p>
+			<nav class="menu-opcoes">
+				<ul>
+					<li><a href="#">Sua Conta</a></li>
+					<li><a href="#">Lista de Desejos</a></li>
+					<li><a href="#">Cartão Fidelidade</a></li>
+					<li><a href="#sobre.html">Sobre</a></li>
+					<li><a href="#">Ajuda</a></li>
+				</ul>
+			</nav>
+		</header>
 		<h1>A Mirror Fashion</h1>
 		<p>A <strong>Mirror Fashion</strong> é a maior empresa comércio eletrônico no segmento de moda em todo o mundo.</p> 
 		<p>Fundada em 1932, possui filiais em 124 países, sendo líder de mercado com mais de 90% de participação em 118 deles.</p>
 		<figure id="centro-distribuicao">
-			<img src="C:\Users\Raphael Gama\Desktop\mirrorfashion\mirrorfashion\img\centro-distribuicao.png">
+			<img src="C:\mirrorfashion\img\centro-distribuicao.png">
 			<figcaption>Centro de distribuição da Mirror Fashion.</figcaption>
 		</figure>
 
@@ -23,7 +39,7 @@
 		<h2 id="historia">História</h2>
 		
 		<figure id="familia-pelho">
-			<img src="C:\Users\Raphael Gama\Desktop\mirrorfashion\mirrorfashion\img\familia-pelho.jpg">
+			<img src="C:\mirrorfashion\img\familia-pelho.jpg">
 			<figcaption>Família Pelho</figcaption>
 		</figure>
 
@@ -53,7 +69,7 @@
 		</ul>
 
 		<div id="rodape">
-			<img src="C:\Users\Raphael Gama\Desktop\mirrorfashion\mirrorfashion\img\logo.png">
+			<img src="C:\mirrorfashion\img\logo.png">
 
 			&copy; Copyright Mirror Fashion
 		</div>
