Divs Paineis e Novidadades

--- a/index.html
+++ b/index.html
@@ -50,6 +50,57 @@
 				<img src="C:\mirrorfashion\img\destaque-home.png" alt="Promoção: Big City Night">
 			</div>
 
+			<div class="container paineis">
+				<section class="paineis novidades">
+					<h2>Novidades</h2>
+					<ol>
+						<li>
+							<a href="produto.html">
+								<figure>
+									<img src="C:\mirrorfashion\img\produtos\miniatura1.png">
+									<figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+								</figure>
+							</a>
+						</li>
+
+						<li>
+							<figure>
+								<img src="C:\mirrorfashion\img\produtos\miniatura2.png">
+								<figcaption>Segundo Produto</figcaption>
+							</figure>
+						</li>
+
+						<li>
+							<figure>
+								<img src="C:\mirrorfashion\img\produtos\miniatura3.png">
+								<figcaption>Terceiro Produto</figcaption>
+							</figure>
+						</li>
+
+						<li>
+							<figure>
+								<img src="C:\mirrorfashion\img\produtos\miniatura4.png">
+								<figcaption>Quarto Produto</figcaption>
+							</figure>
+						</li>
+
+						<li>
+							<figure>
+								<img src="C:\mirrorfashion\img\produtos\miniatura5.png">
+								<figcaption>Quinto Produto</figcaption>
+							</figure>
+						</li>
+
+						<li>
+							<figure>
+								<img src="C:\mirrorfashion\img\produtos\miniatura6.png">
+								<figcaption>Sexto Produto</figcaption>
+							</figure>
+						</li>
+					</ol>
+				</section>
+			</div>
+
 		</section>
 		<section id="destaques">
 
