--- a/fotos.html
+++ b/fotos.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Fotos</title>
-        <link rel="stylesheet" href="/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_css/estilo.css">
-        <link rel="stylesheet" href="/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_css/fotos.css">
+        <link rel="stylesheet" href="C:/mirrorfashion/_css/estilo.css">
+        <link rel="stylesheet" href="C:/mirrorfashion/_css/fotos.css">
     </head>
 
-    <script src = "/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_javascript/funcoes.js"></script>
+    <script src = "C:/mirrorfashion/_javascript/funcoes.js"></script>
 
     <body>
         <div id="interface">
@@ -18,17 +18,17 @@
                 </hgroup>
 
                 <figure>
-                    <img id="icone" src="/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png">
+                    <img id="icone" src="C:/mirrorfashion/_imagens/glass-oculos-preto-peq.png">
                 </figure>
 
                 <nav id="menu">
                     <h1>Menu Principal</h1>
                     <ul>
-                        <li onmouseover="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/home.png')" onmouseout="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/fotos.png')"><a href="/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/index.html">Home</a></li>
-                        <li onmouseover="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/especificacoes.png')" onmouseout="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/fotos.png')"><a href="/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/specs.html">Especificações</a></li>
-                        <li onmouseover="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/fotos.png')" onmouseout="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/fotos.png')"><a href="/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/fotos.html">Fotos</a></li>
-                        <li onmouseover="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/multimidia.png')" onmouseout="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/fotos.png')"><a href="/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/multimidia.html">Multimídia</a></li>
-                        <li onmouseover="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/contato.png')" onmouseout="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/fotos.png')"><a href="/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/fale-conosco.html">Fale conosco</a></li>
+                        <li onmouseover="mudaFoto('C:/mirrorfashion/_imagens/home.png')" onmouseout="mudaFoto('C:/mirrorfashion/_imagens/fotos.png')"><a href="C:/mirrorfashion/index.html">Home</a></li>
+                        <li onmouseover="mudaFoto('C:/mirrorfashion/_imagens/especificacoes.png')" onmouseout="mudaFoto('C:/mirrorfashion/_imagens/fotos.png')"><a href="C:/mirrorfashion/specs.html">Especificações</a></li>
+                        <li onmouseover="mudaFoto('C:/mirrorfashion/_imagens/fotos.png')" onmouseout="mudaFoto('C:/mirrorfashion/_imagens/fotos.png')"><a href="C:/mirrorfashion/fotos.html">Fotos</a></li>
+                        <li onmouseover="mudaFoto('C:/mirrorfashion/_imagens/multimidia.png')" onmouseout="mudaFoto('C:/mirrorfashion/_imagens/fotos.png')"><a href="C:/mirrorfashion/multimidia.html">Multimídia</a></li>
+                        <li onmouseover="mudaFoto('C:/mirrorfashion/_imagens/contato.png')" onmouseout="mudaFoto('C:/mirrorfashion/_imagens/fotos.png')"><a href="C:/mirrorfashion/fale-conosco.html">Fale conosco</a></li>
                     </ul>
                 </nav>
             </header>
