Alteração aula 31 e conteúdo de mídia

--- a/multimidia.html
+++ b/multimidia.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Multimídia</title>
-        <link rel="stylesheet" href="/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_css/estilo.css">
+        <link rel="stylesheet" href="C:/mirrorfashion/_css/estilo.css">
+        <link rel="stylesheet" href="C:/mirrorfashion//_css/media.css">
     </head>
 
-    <script src = "/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_javascript/funcoes.js"></script>
+    <script src = "C:/mirrorfashion/_javascript/funcoes.js"></script>
 
     <body>
         <div id="interface">
@@ -17,24 +18,39 @@
                 </hgroup>
 
                 <figure>
-                    <img id="icone" src="/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png">
+                    <img id="icone" src="C:/mirrorfashion/_imagens/multimidia.png">
                 </figure>
 
                 <nav id="menu">
                     <h1>Menu Principal</h1>
                     <ul>
-                        <li onmouseover="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/home.png')" onmouseout="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/multimidia.png')"><a href="/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/index.html">Home</a></li>
-                        <li onmouseover="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/especificacoes.png')" onmouseout="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/multimidia.png')"><a href="/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/specs.html">Especificações</a></li>
-                        <li onmouseover="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/fotos.png')" onmouseout="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/multimidia.png')"><a href="/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/fotos.html">Fotos</a></li>
-                        <li onmouseover="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/multimidia.png')" onmouseout="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/multimidia.png')"><a href="/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/multimidia.html">Multimídia</a></li>
-                        <li onmouseover="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/contato.png')" onmouseout="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/multimidia.png')"><a href="/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/fale-conosco.html">Fale conosco</a></li>
+                        <li onmouseover="mudaFoto('C:/mirrorfashion/_imagens/home.png')" onmouseout="mudaFoto('C:/mirrorfashion/_imagens/multimidia.png')"><a href="C:/mirrorfashion/index.html">Home</a></li>
+                        <li onmouseover="mudaFoto('C:/mirrorfashion/_imagens/especificacoes.png')" onmouseout="mudaFoto('C:/mirrorfashion/_imagens/multimidia.png')"><a href="C:/mirrorfashion/specs.html">Especificações</a></li>
+                        <li onmouseover="mudaFoto('C:/mirrorfashion/_imagens/fotos.png')" onmouseout="mudaFoto('C:/mirrorfashion/_imagens/multimidia.png')"><a href="C:/mirrorfashion/fotos.html">Fotos</a></li>
+                        <li onmouseover="mudaFoto('C:/mirrorfashion/_imagens/multimidia.png')" onmouseout="mudaFoto('C:/mirrorfashion/_imagens/multimidia.png')"><a href="C:/mirrorfashion/multimidia.html">Multimídia</a></li>
+                        <li onmouseover="mudaFoto('C:/mirrorfashion/_imagens/contato.png')" onmouseout="mudaFoto('C:/mirrorfashion/_imagens/multimidia.png')"><a href="C:/mirrorfashion/fale-conosco.html">Fale conosco</a></li>
                     </ul>
                 </nav>
             </header>
-Glass > Multimídia
-Sons e Vídeos
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+            <section id="corpo-full"> 
+                <article id="noticia-principal">
+                    <header id="cabecalho-artigo">
+                        <hgroup>            
+                            <h3>Glass > Multimídia</h3>
+                            <h1>Sons e vídeos</h1>
+                            <h2>por Gustavo Guanabara</h2>
+                            <h3 class="direita">Atualizado em 01/Maio/2013</h3>
+                        </hgroup>
+                    </header>
+                    <div id="tv-radio">
+                        <audio id="musica">
+
+                        </audio>
+                        <video id="filme">
+
+                        </video>
+                    </div>    
+                </article>
 
 
 Áudio e Vídeo
