--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Tudo sobre Google Glass</title>
-        <link rel="stylesheet" href="/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_css/estilo.css">
+        <link rel="stylesheet" href="C:/mirrorfashion/_css/estilo.css">
     </head>
 
-    <script src = "/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_javascript/funcoes.js"></script>
+    <script src = "C:/mirrorfashion/_javascript/funcoes.js"></script>
 
     <body>
         <div id="interface">
@@ -17,17 +17,17 @@
                 </hgroup>
 
                 <figure>
-                    <img id="icone" src="/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png">
+                    <img id="icone" src="C:/mirrorfashion/_imagens/glass-oculos-preto-peq.png">
                 </figure>
 
                 <nav id="menu">
                     <h1>Menu Principal</h1>
                     <ul>
-                        <li onmouseover="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/home.png')" onmouseout="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a href="/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/index.html">Home</a></li>
-                        <li onmouseover="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/especificacoes.png')" onmouseout="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a href="/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/specs.html">Especificações</a></li>
-                        <li onmouseover="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/fotos.png')" onmouseout="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a href="/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/fotos.html">Fotos</a></li>
-                        <li onmouseover="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/multimidia.png')" onmouseout="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a href="/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/multimidia.html">Multimídia</a></li>
-                        <li onmouseover="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/contato.png')" onmouseout="mudaFoto('/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a href="/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/fale-conosco.html">Fale conosco</a></li>
+                        <li onmouseover="mudaFoto('C:/mirrorfashion/_imagens/home.png')" onmouseout="mudaFoto('C:/mirrorfashion/_imagens/glass-oculos-preto-peq.png')"><a href="C:/mirrorfashion/index.html">Home</a></li>
+                        <li onmouseover="mudaFoto('C:/mirrorfashion/_imagens/especificacoes.png')" onmouseout="mudaFoto('C:/mirrorfashion/_imagens/glass-oculos-preto-peq.png')"><a href="C:/mirrorfashion/specs.html">Especificações</a></li>
+                        <li onmouseover="mudaFoto('C:/mirrorfashion/_imagens/fotos.png')" onmouseout="mudaFoto('C:/mirrorfashion/_imagens/glass-oculos-preto-peq.png')"><a href="C:/mirrorfashion/fotos.html">Fotos</a></li>
+                        <li onmouseover="mudaFoto('C:/mirrorfashion/_imagens/multimidia.png')" onmouseout="mudaFoto('C:/mirrorfashion/_imagens/glass-oculos-preto-peq.png')"><a href="C:/mirrorfashion/multimidia.html">Multimídia</a></li>
+                        <li onmouseover="mudaFoto('C:/mirrorfashion/_imagens/contato.png')" onmouseout="mudaFoto('C:/mirrorfashion/_imagens/glass-oculos-preto-peq.png')"><a href="C:/mirrorfashion/fale-conosco.html">Fale conosco</a></li>
                     </ul>
                 </nav>
             </header>
@@ -46,7 +46,7 @@
                         <p>O <b>Google Glass</b> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <a href="http://glass.google.com" target="_blank">Project Glass</a>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeo&shy;confe&shy;rências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 
                         <figure class="foto-legenda">
-                            <img src="/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/glass-quadro-homem-mulher.jpg">
+                            <img src="C:/mirrorfashion/_imagens/glass-quadro-homem-mulher.jpg">
                             <figcaption>
                                 <h3>Google Glass</h3>
                                 <p>Uma nova maneira de ver o mundo.</p>
@@ -74,7 +74,10 @@
                         <h1>O que você pode fazer com o Google Glasses</h1>
                         <p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-<wbr/>humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
-                        [AQUI ENTRA UM VÍDEO]
+                        <video id="filme01" controls="controls" poster="C:/mirrorfashion/_imagens/video-mini01.jpg">
+                            <source src="C:/mirrorfashion/_media/how-it-feels.mp4" type="video/mp4">
+                            Desculpe, mas não foi possível carregar o vídeo.
+                        </video>
                 </article>  
             </section>   
             
@@ -82,7 +85,10 @@
                 <h1>Outras Notícias</h1>
                 <h2>Vídeo mais recente</h2>
 
-                [AQUI ENTRA UM VÍDEO]
+                <video id="filme02" controls="controls" poster="C:/mirrorfashion/_imagens/video-mini02.jpg">
+                            <source src="C:/mirrorfashion/_media/one-day.mp4" type="video/mp4">
+                            Desculpe, mas não foi possível carregar o vídeo.
+                        </video>
                 
                 <h2>Novidades no Glass</h2>
                 <p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em determinados ossos de sua cabeça, sem usar nenhum tipo de alto-falante.</p>
