--- a/multimidia.html
+++ b/multimidia.html
@@ -43,11 +43,13 @@
                         </hgroup>
                     </header>
                     <div id="tv-radio">
-                        <audio id="musica">
-
+                        <audio id="musica" controls="controls">
+                            <source src="C:/mirrorfashion/_media/2009-lovers-carvings-bibio.mp3" type="audio/mpeg"/>
+                            Desculpe, mas não foi possível carregar o áudio.
                         </audio>
-                        <video id="filme">
-
+                        <video id="filme" controls="controls" poster="C:/mirrorfashion/_imagens/video-mini03.jpg">
+                            <source src="C:/mirrorfashion/_media/getting-started.mp4" type="video/mp4">
+                            Desculpe, mas não foi possível carregar o vídeo.
                         </video>
                     </div>    
                 </article>
