--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8"/>
         <title>Fale Conosco</title>
         <link rel="stylesheet" href="C:/mirrorfashion/_css/estilo.css">
+        <link rel="stylesheet" href="C:/mirrorfashion/_css/form.css">
     </head>
 
     <script src = "C:/mirrorfashion/_javascript/funcoes.js"></script>
@@ -42,33 +43,64 @@
                     </hgroup>
                 </header>   
 
-Identificação do Usuário
-    Nome:
-    Senha:
-    E-mail:
-    Sexo:
-        - Masculino
-        - Feminino
-    Data de Nascimento:
+<form method="POST" id="fContato" action="mailto: raphegama1@gmail.com ">
+    <fieldset id="usuario"><legend>Identificação do Usuário</legend>
+        <p><label for="cNome">Nome:</label><input type="text" name="tNome" id="cNome" size="20" maxlength="30" placeholder="Nome Completo"/></p>
+        <p><label for="cSenha">Senha:</label><input type="password" name="tSenha" id="cSenha" size="8" maxlength="8" placeholder="8 dígitos"/></p>
+        <p><label for="cEmail">E-mail:</label><input type="email" name="tEmail" id="cEmail" size="20" maxlength="40"/></p>
+        <fieldset id="sexo"><legend>Sexo:</legend>
+            <input type="radio" name="tSexo" id="cMasc"/><label for="cMasc">Masculino</label><br>
+            <input type="radio" name="tSexo" id="cFem"/><label for="cFem">Feminino</label></fieldset>
+        <p>Data de Nascimento:<input type="date" id="cNasc"/></p>
+    </fieldset>
 
-Endereço do Usuário
-    Logradouro:
-    Número:
-    Estado:
-    Cidade:
+    <fieldset id="endereco"><legend>Endereço do Usuário</legend>
+        <p><label for="cRua">Logradouro:</label><input type="text" name="tRua" id="cRua" size="13" maxlength="80" placeholder="Rua, Av, Trav, ..."/></p>
+        <p><label for="cNum">Número:</label><input type="number" name="tNum" id="cNum" min="0" max="999999"/></p>
+        <p><label for="cEst">Estado:</label>
+        <select name="tEst" id="cEst">
+            <optgroup label="Região Norte">
+                <option selected>Pará</option>
+            </optgroup>
+            <optgroup label="Região Nordeste">
+                    <option>Rio Grande do Norte</option>
+            </optgroup>
+            <optgroup label="Região Sudeste">
+                <option>Rio de Janeiro</option>
+                <option>São Paulo</option>
+                <option>Minas Gerais</option>
+            </optgroup>
+            <optgroup label="Região Sul">
+                <option>Paraná</option>
+            </optgroup>            
+        </select></p>
+        <p><label for="cCid">Cidade:</label>
+        <input type="text" name="tCid" id="cCid" size="20" maxlength="40" placeholder="Cidade" list="cidades"/></p>
+        <datalist id="cidades">
+            <option value="Rio de Janeiro"></option>
+            <option value="Nova Iguaçu"></option>
+            <option value="Niterói"></option>
+            <option value="Belford Roxo"></option>
+        </datalist>
+    </fieldset>
 
-Mensagem do Usuário
-    Grau de Urgência:
-    Mensagem:
+    <fieldset id="mensagem"><legend>Mensagem do Usuário</legend>
+        <p><label for="cUrg">Grau de Urgência:</label>
+        0<input type="range" name="tUrg" id="cUrg" min="0" max="10" step="1"/>10</p>
+        <p><label for="cMsg">Mensagem:</label>
+        <textarea name="tMsg" id="cMsg" cols="45" rows="5" placeholder="Escreva aqui sua mensagem."></textarea></p>
+    </fieldset>
 
-Quero um Google Glass
-    Gostaria de adquirir um Google Glass quando disponível
-    Cor:
-    Quantidade:
-    Preço Total: R$
+    <fieldset id="pedido"><legend>Quero um Google Glass</legend>
+        <p><label for="cPed">Gostaria de adquirir um Google Glass quando disponível</label></p>
+        <p><label for="cCor">Cor:</label></p>
+        <p><label for="CQtd">Quantidade:</label></p>
+        <p><label for="cTot">Preço Total: R$</label></p>
+    </fieldset>
 
 
-[BOTÃO ENVIAR]
+    [BOTÃO ENVIAR]
+</form>
 
 
 <footer id="rodape">
